--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,11 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
+
 @tailwind base;
+body {
+    font-family: 'Poppins', sans-serif;
+}
 @tailwind components;
 @tailwind utilities;
 
