--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,30 +770,6 @@ img {
   position: relative;
 }
 
-.top-\[0px\]{
-  top: 0px;
-}
-
-.left-\[176px\]{
-  left: 176px;
-}
-
-.left-\[20px\]{
-  left: 20px;
-}
-
-.right-\[20px\]{
-  right: 20px;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.top-\[42px\]{
-  top: 42px;
-}
-
 .top-3{
   top: 0.75rem;
 }
@@ -814,20 +790,12 @@ img {
   right: 0px;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .top-16{
   top: 4rem;
-}
-
-.z-40{
-  z-index: 40;
-}
-
-.z-20{
-  z-index: 20;
-}
-
-.col-span-1{
-  grid-column: span 1 / span 1;
 }
 
 .col-span-12{
@@ -837,11 +805,6 @@ img {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .ml-3{
@@ -888,10 +851,6 @@ img {
   margin-bottom: 0.75rem;
 }
 
-.box-border{
-  box-sizing: border-box;
-}
-
 .block{
   display: block;
 }
@@ -910,22 +869,6 @@ img {
 
 .hidden{
   display: none;
-}
-
-.h-\[340px\]{
-  height: 340px;
-}
-
-.h-\[400px\]{
-  height: 400px;
-}
-
-.h-\[200px\]{
-  height: 200px;
-}
-
-.h-\[100\%\]{
-  height: 100%;
 }
 
 .h-7{
@@ -952,12 +895,32 @@ img {
   height: 1.25rem;
 }
 
-.max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
-  max-height: calc(100vh - 4rem);
+.h-3{
+  height: 0.75rem;
 }
 
-.min-h-\[400px\]{
-  min-height: 400px;
+.h-6{
+  height: 1.5rem;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-20{
+  height: 5rem;
+}
+
+.h-52{
+  height: 13rem;
+}
+
+.h-80{
+  height: 20rem;
+}
+
+.max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
+  max-height: calc(100vh - 4rem);
 }
 
 .min-h-screen{
@@ -972,12 +935,8 @@ img {
   width: 100%;
 }
 
-.w-\[200px\]{
-  width: 200px;
-}
-
-.w-\[100\%\]{
-  width: 100%;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-7{
@@ -1012,8 +971,12 @@ img {
   width: 1.25rem;
 }
 
-.min-w-\[1280\.3px\]{
-  min-width: 1280.3px;
+.w-10{
+  width: 2.5rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .max-w-sm{
@@ -1088,18 +1051,6 @@ img {
   resize: both;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
@@ -1120,20 +1071,8 @@ img {
   justify-content: space-between;
 }
 
-.gap-4{
-  gap: 1rem;
-}
-
 .gap-3{
   gap: 0.75rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
-}
-
-.gap-5{
-  gap: 1.25rem;
 }
 
 .gap-8{
@@ -1144,15 +1083,26 @@ img {
   gap: 1.5rem;
 }
 
-.gap-x-2{
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.divide-y-reverse > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 1;
 }
 
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
@@ -1180,7 +1130,31 @@ img {
   border-radius: 0.375rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
 .border-b{
+  border-bottom-width: 1px;
+}
+
+.border-b-0{
+  border-bottom-width: 0px;
+}
+
+.border-b-\[1px\]{
   border-bottom-width: 1px;
 }
 
@@ -1199,19 +1173,23 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
+.border-transparent{
+  border-color: transparent;
+}
+
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
 .bg-\[\#eee\]{
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#fff\]{
+.bg-zinc-800{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 
 .bg-stone-700{
@@ -1234,6 +1212,11 @@ img {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1249,13 +1232,34 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-1{
-  padding: 0.25rem;
 }
 
 .p-4{
@@ -1274,14 +1278,9 @@ img {
   padding: 0px;
 }
 
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .py-4{
@@ -1289,14 +1288,9 @@ img {
   padding-bottom: 1rem;
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2{
@@ -1309,29 +1303,24 @@ img {
   padding-right: 1.25rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.pl-3{
-  padding-left: 0.75rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
-}
-
-.pl-4{
+.px-4{
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.pt-1{
-  padding-top: 0.25rem;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pt-16{
@@ -1354,32 +1343,6 @@ img {
   font-family: Mochiy Pop P One, sans-serif;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-\[18px\]{
-  font-size: 18px;
-}
-
-.text-\[14px\]{
-  font-size: 14px;
-}
-
-.text-\[12px\]{
-  font-size: 12px;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-\[16px\]{
-  font-size: 16px;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1395,9 +1358,33 @@ img {
   line-height: 2.25rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.font-thin{
+  font-weight: 100;
 }
 
 .font-semibold{
@@ -1408,27 +1395,13 @@ img {
   font-weight: 500;
 }
 
-.font-thin{
-  font-weight: 100;
+.font-light{
+  font-weight: 300;
 }
 
-.tracking-wider{
-  letter-spacing: 0.05em;
-}
-
-.text-red-600{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-rose-700{
-  --tw-text-opacity: 1;
-  color: rgb(190 18 60 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -1451,14 +1424,14 @@ img {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .\!text-white{
@@ -1476,9 +1449,9 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.line-through{
-  -webkit-text-decoration-line: line-through;
-          text-decoration-line: line-through;
+.text-zinc-900{
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -1513,6 +1486,19 @@ img {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.outline-hidden{
+  outline-style: hidden;
+}
+
+.outline-0{
+  outline-width: 0px;
 }
 
 .ring-2{
@@ -1592,18 +1578,13 @@ img {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:rounded-lg:hover{
-  border-radius: 0.5rem;
-}
-
-.hover\:bg-\[\#65c8c6\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
-}
-
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.focus\:border-transparent:focus{
+  border-color: transparent;
 }
 
 .focus\:outline-none:focus{
@@ -1611,8 +1592,10 @@ img {
   outline-offset: 2px;
 }
 
-.group:hover .group-hover\:grid{
-  display: grid;
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 @media (min-width: 640px){
@@ -1626,30 +1609,7 @@ img {
   }
 }
 
-@media (min-width: 768px){
-
-  .md\:hidden{
-    display: none;
-  }
-}
-
 @media (min-width: 1024px){
-
-  .lg\:left-\[-16px\]{
-    left: -16px;
-  }
-
-  .lg\:right-\[-16px\]{
-    right: -16px;
-  }
-
-  .lg\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
-  .lg\:col-span-7{
-    grid-column: span 7 / span 7;
-  }
 
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
@@ -1657,11 +1617,6 @@ img {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
-  }
-
-  .lg\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .lg\:mb-0{
@@ -1676,32 +1631,16 @@ img {
     display: flex;
   }
 
-  .lg\:grid{
-    display: grid;
-  }
-
   .lg\:hidden{
     display: none;
-  }
-
-  .lg\:h-\[400px\]{
-    height: 400px;
   }
 
   .lg\:w-\[980px\]{
     width: 980px;
   }
 
-  .lg\:grid-cols-8{
-    grid-template-columns: repeat(8, minmax(0, 1fr));
-  }
-
-  .lg\:gap-8{
-    gap: 2rem;
-  }
-
-  .lg\:rounded-lg{
-    border-radius: 0.5rem;
+  .lg\:gap-6{
+    gap: 1.5rem;
   }
 
   .lg\:p-7{
