--- a/public/css/app.css
+++ b/public/css/app.css
@@ -737,24 +737,6 @@ body {
 .relative{
   position: relative;
 }
-.top-\[0px\]{
-  top: 0px;
-}
-.left-\[176px\]{
-  left: 176px;
-}
-.left-\[20px\]{
-  left: 20px;
-}
-.right-\[20px\]{
-  right: 20px;
-}
-.left-0{
-  left: 0px;
-}
-.top-\[42px\]{
-  top: 42px;
-}
 .top-3{
   top: 0.75rem;
 }
@@ -770,17 +752,11 @@ body {
 .right-0{
   right: 0px;
 }
+.left-0{
+  left: 0px;
+}
 .top-16{
   top: 4rem;
-}
-.z-40{
-  z-index: 40;
-}
-.z-20{
-  z-index: 20;
-}
-.col-span-1{
-  grid-column: span 1 / span 1;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -788,10 +764,6 @@ body {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -826,9 +798,6 @@ body {
 .mb-3{
   margin-bottom: 0.75rem;
 }
-.box-border{
-  box-sizing: border-box;
-}
 .block{
   display: block;
 }
@@ -843,18 +812,6 @@ body {
 }
 .hidden{
   display: none;
-}
-.h-\[340px\]{
-  height: 340px;
-}
-.h-\[400px\]{
-  height: 400px;
-}
-.h-\[200px\]{
-  height: 200px;
-}
-.h-\[100\%\]{
-  height: 100%;
 }
 .h-7{
   height: 1.75rem;
@@ -874,11 +831,26 @@ body {
 .h-5{
   height: 1.25rem;
 }
+.h-3{
+  height: 0.75rem;
+}
+.h-6{
+  height: 1.5rem;
+}
+.h-full{
+  height: 100%;
+}
+.h-20{
+  height: 5rem;
+}
+.h-52{
+  height: 13rem;
+}
+.h-80{
+  height: 20rem;
+}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
-}
-.min-h-\[400px\]{
-  min-height: 400px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -889,11 +861,8 @@ body {
 .w-full{
   width: 100%;
 }
-.w-\[200px\]{
-  width: 200px;
-}
-.w-\[100\%\]{
-  width: 100%;
+.w-1\/2{
+  width: 50%;
 }
 .w-7{
   width: 1.75rem;
@@ -919,8 +888,11 @@ body {
 .w-5{
   width: 1.25rem;
 }
-.min-w-\[1280\.3px\]{
-  min-width: 1280.3px;
+.w-10{
+  width: 2.5rem;
+}
+.w-20{
+  width: 5rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -982,15 +954,6 @@ body {
 .resize{
   resize: both;
 }
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
@@ -1006,17 +969,8 @@ body {
 .justify-between{
   justify-content: space-between;
 }
-.gap-4{
-  gap: 1rem;
-}
 .gap-3{
   gap: 0.75rem;
-}
-.gap-2{
-  gap: 0.5rem;
-}
-.gap-5{
-  gap: 1.25rem;
 }
 .gap-8{
   gap: 2rem;
@@ -1024,14 +978,22 @@ body {
 .gap-6{
   gap: 1.5rem;
 }
-.gap-x-2{
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+.gap-2{
+  gap: 0.5rem;
+}
+.gap-5{
+  gap: 1.25rem;
+}
+.gap-1{
+  gap: 0.25rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.divide-y-reverse > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 1;
 }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
@@ -1052,7 +1014,25 @@ body {
 .rounded-md{
   border-radius: 0.375rem;
 }
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+.rounded{
+  border-radius: 0.25rem;
+}
+.border-b-2{
+  border-bottom-width: 2px;
+}
 .border-b{
+  border-bottom-width: 1px;
+}
+.border-b-0{
+  border-bottom-width: 0px;
+}
+.border-b-\[1px\]{
   border-bottom-width: 1px;
 }
 .border-gray-300{
@@ -1067,17 +1047,20 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
+.border-transparent{
+  border-color: transparent;
+}
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
 .bg-\[\#eee\]{
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
 }
-.bg-\[\#fff\]{
+.bg-zinc-800{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 .bg-stone-700{
   --tw-bg-opacity: 1;
@@ -1095,6 +1078,10 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1107,12 +1094,29 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
+.bg-neutral-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+}
+.bg-zinc-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+}
+.bg-zinc-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+.bg-zinc-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+.bg-gray-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
-}
-.p-1{
-  padding: 0.25rem;
 }
 .p-4{
   padding: 1rem;
@@ -1126,25 +1130,17 @@ body {
 .p-0{
   padding: 0px;
 }
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .py-2{
   padding-top: 0.5rem;
@@ -1154,24 +1150,21 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.pl-3{
-  padding-left: 0.75rem;
-}
-.pt-4{
-  padding-top: 1rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
-}
-.pl-4{
+.px-4{
   padding-left: 1rem;
+  padding-right: 1rem;
 }
-.pt-1{
-  padding-top: 0.25rem;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .pt-16{
   padding-top: 4rem;
@@ -1188,26 +1181,6 @@ body {
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-\[18px\]{
-  font-size: 18px;
-}
-.text-\[14px\]{
-  font-size: 14px;
-}
-.text-\[12px\]{
-  font-size: 12px;
-}
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-\[16px\]{
-  font-size: 16px;
-}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1220,9 +1193,28 @@ body {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.font-thin{
+  font-weight: 100;
 }
 .font-semibold{
   font-weight: 600;
@@ -1230,23 +1222,12 @@ body {
 .font-medium{
   font-weight: 500;
 }
-.font-thin{
-  font-weight: 100;
+.font-light{
+  font-weight: 300;
 }
-.tracking-wider{
-  letter-spacing: 0.05em;
-}
-.text-red-600{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.text-rose-700{
-  --tw-text-opacity: 1;
-  color: rgb(190 18 60 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-slate-50{
   --tw-text-opacity: 1;
@@ -1264,13 +1245,13 @@ body {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .\!text-white{
   --tw-text-opacity: 1 !important;
@@ -1284,9 +1265,9 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.line-through{
-  -webkit-text-decoration-line: line-through;
-          text-decoration-line: line-through;
+.text-zinc-900{
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -1314,6 +1295,16 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.outline-hidden{
+  outline-style: hidden;
+}
+.outline-0{
+  outline-width: 0px;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1371,18 +1362,13 @@ body {
     display: block !important;
 }
 
-.hover\:rounded-lg:hover{
-  border-radius: 0.5rem;
-}
-
-.hover\:bg-\[\#65c8c6\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 200 198 / var(--tw-bg-opacity));
-}
-
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.focus\:border-transparent:focus{
+  border-color: transparent;
 }
 
 .focus\:outline-none:focus{
@@ -1390,8 +1376,10 @@ body {
   outline-offset: 2px;
 }
 
-.group:hover .group-hover\:grid{
-  display: grid;
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 @media (min-width: 640px){
@@ -1407,35 +1395,7 @@ body {
   }
 }
 
-@media (min-width: 768px){
-
-
-  .md\:hidden{
-    display: none;
-  }
-}
-
 @media (min-width: 1024px){
-
-
-  .lg\:left-\[-16px\]{
-    left: -16px;
-  }
-
-
-  .lg\:right-\[-16px\]{
-    right: -16px;
-  }
-
-
-  .lg\:col-span-1{
-    grid-column: span 1 / span 1;
-  }
-
-
-  .lg\:col-span-7{
-    grid-column: span 7 / span 7;
-  }
 
 
   .lg\:col-span-3{
@@ -1445,12 +1405,6 @@ body {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
-  }
-
-
-  .lg\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
   }
 
 
@@ -1469,18 +1423,8 @@ body {
   }
 
 
-  .lg\:grid{
-    display: grid;
-  }
-
-
   .lg\:hidden{
     display: none;
-  }
-
-
-  .lg\:h-\[400px\]{
-    height: 400px;
   }
 
 
@@ -1489,18 +1433,8 @@ body {
   }
 
 
-  .lg\:grid-cols-8{
-    grid-template-columns: repeat(8, minmax(0, 1fr));
-  }
-
-
-  .lg\:gap-8{
-    gap: 2rem;
-  }
-
-
-  .lg\:rounded-lg{
-    border-radius: 0.5rem;
+  .lg\:gap-6{
+    gap: 1.5rem;
   }
 
 
