--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css);
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap);
+@import url(https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js);
 /*
 ! tailwindcss v3.0.17 | MIT License | https://tailwindcss.com
 */
@@ -813,6 +814,12 @@ body {
 .hidden{
   display: none;
 }
+.h-full{
+  height: 100%;
+}
+.h-6{
+  height: 1.5rem;
+}
 .h-7{
   height: 1.75rem;
 }
@@ -831,23 +838,8 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-3{
-  height: 0.75rem;
-}
-.h-6{
-  height: 1.5rem;
-}
-.h-full{
-  height: 100%;
-}
-.h-20{
-  height: 5rem;
-}
-.h-52{
-  height: 13rem;
-}
-.h-80{
-  height: 20rem;
+.h-72{
+  height: 18rem;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -860,9 +852,6 @@ body {
 }
 .w-full{
   width: 100%;
-}
-.w-1\/2{
-  width: 50%;
 }
 .w-7{
   width: 1.75rem;
@@ -888,11 +877,23 @@ body {
 .w-5{
   width: 1.25rem;
 }
+.w-32{
+  width: 8rem;
+}
 .w-10{
   width: 2.5rem;
 }
-.w-20{
-  width: 5rem;
+.w-1\/3{
+  width: 33.333333%;
+}
+.w-2\/4{
+  width: 50%;
+}
+.w-3\/5{
+  width: 60%;
+}
+.w-28{
+  width: 7rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -975,25 +976,22 @@ body {
 .gap-8{
   gap: 2rem;
 }
-.gap-6{
-  gap: 1.5rem;
-}
 .gap-2{
   gap: 0.5rem;
 }
 .gap-5{
   gap: 1.25rem;
 }
-.gap-1{
-  gap: 0.25rem;
+.gap-4{
+  gap: 1rem;
+}
+.gap-6{
+  gap: 1.5rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-.divide-y-reverse > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-y-reverse: 1;
 }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
@@ -1005,23 +1003,17 @@ body {
 .overflow-hidden{
   overflow: hidden;
 }
+.rounded-md{
+  border-radius: 0.375rem;
+}
 .rounded-lg{
   border-radius: 0.5rem;
 }
 .rounded-full{
   border-radius: 9999px;
 }
-.rounded-md{
-  border-radius: 0.375rem;
-}
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-.rounded{
-  border-radius: 0.25rem;
+.border-b-\[1px\]{
+  border-bottom-width: 1px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -1029,11 +1021,8 @@ body {
 .border-b{
   border-bottom-width: 1px;
 }
-.border-b-0{
-  border-bottom-width: 0px;
-}
-.border-b-\[1px\]{
-  border-bottom-width: 1px;
+.border-transparent{
+  border-color: transparent;
 }
 .border-gray-300{
   --tw-border-opacity: 1;
@@ -1047,24 +1036,17 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
-.border-transparent{
-  border-color: transparent;
-}
-.border-gray-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-.bg-\[\#eee\]{
+.bg-gray-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+.bg-zinc-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-.bg-stone-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(68 64 60 / var(--tw-bg-opacity));
 }
 .bg-red-100{
   --tw-bg-opacity: 1;
@@ -1094,26 +1076,6 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
-.bg-neutral-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
-}
-.bg-zinc-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
-}
-.bg-zinc-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-.bg-zinc-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-.bg-gray-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1138,33 +1100,29 @@ body {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pt-16{
   padding-top: 4rem;
@@ -1180,6 +1138,10 @@ body {
 }
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-sm{
   font-size: 0.875rem;
@@ -1201,17 +1163,12 @@ body {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.font-medium{
+  font-weight: 500;
 }
 .font-thin{
   font-weight: 100;
@@ -1219,19 +1176,23 @@ body {
 .font-semibold{
   font-weight: 600;
 }
-.font-medium{
-  font-weight: 500;
-}
 .font-light{
   font-weight: 300;
 }
-.text-white{
+.font-extralight{
+  font-weight: 200;
+}
+.text-zinc-900{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 .text-slate-50{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-red-800{
   --tw-text-opacity: 1;
@@ -1265,10 +1226,6 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-zinc-900{
-  --tw-text-opacity: 1;
-  color: rgb(24 24 27 / var(--tw-text-opacity));
-}
 .opacity-0{
   opacity: 0;
 }
@@ -1295,16 +1252,6 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.outline-none{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-.outline-hidden{
-  outline-style: hidden;
-}
-.outline-0{
-  outline-width: 0px;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
