feat(user): slider component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,18 @@ body {
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+}
+
 .menu-item::before {
     content: "";
     border: 15px solid;
