--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,17 +770,12 @@ img {
   position: relative;
 }
 
-.sticky{
-  position: -webkit-sticky;
-  position: sticky;
+.left-4{
+  left: 1rem;
 }
 
-.left-0{
-  left: 0px;
-}
-
-.right-0{
-  right: 0px;
+.right-4{
+  right: 1rem;
 }
 
 .top-3{
@@ -795,6 +790,10 @@ img {
   top: 0px;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .top-1{
   top: 0.25rem;
 }
@@ -803,8 +802,20 @@ img {
   right: 0.25rem;
 }
 
+.right-0{
+  right: 0px;
+}
+
 .top-16{
   top: 4rem;
+}
+
+.z-\[2\]{
+  z-index: 2;
+}
+
+.z-\[1\]{
+  z-index: 1;
 }
 
 .col-span-12{
@@ -816,12 +827,12 @@ img {
   margin-right: auto;
 }
 
-.-mr-14{
-  margin-right: -3.5rem;
-}
-
 .ml-auto{
   margin-left: auto;
+}
+
+.-mr-14{
+  margin-right: -3.5rem;
 }
 
 .ml-3{
@@ -864,6 +875,14 @@ img {
   margin-bottom: 0.75rem;
 }
 
+.mr-8{
+  margin-right: 2rem;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -888,16 +907,16 @@ img {
   height: 24rem;
 }
 
-.h-14{
-  height: 3.5rem;
-}
-
 .h-full{
   height: 100%;
 }
 
 .h-3{
   height: 0.75rem;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .h-7{
@@ -920,16 +939,8 @@ img {
   height: 1.25rem;
 }
 
-.h-\[\]{
-  height: ;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
-.h-60{
-  height: 15rem;
+.h-32{
+  height: 8rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -948,20 +959,28 @@ img {
   width: 60%;
 }
 
-.w-14{
-  width: 3.5rem;
-}
-
-.w-1\/5{
-  width: 20%;
-}
-
 .w-3{
   width: 0.75rem;
 }
 
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
 .w-full{
   width: 100%;
+}
+
+.w-14{
+  width: 3.5rem;
+}
+
+.w-32{
+  width: 8rem;
 }
 
 .w-7{
@@ -992,40 +1011,16 @@ img {
   width: 1.25rem;
 }
 
-.w-1\/3{
-  width: 33.333333%;
+.w-2{
+  width: 0.5rem;
 }
 
-.w-\[240px\]{
-  width: 240px;
-}
-
-.w-1\/4{
-  width: 25%;
-}
-
-.w-2\/5{
-  width: 40%;
-}
-
-.min-w-full{
-  min-width: 100%;
-}
-
-.min-w-\[400px\]{
-  min-width: 400px;
-}
-
-.min-w-\[200px\]{
-  min-width: 200px;
+.w-48{
+  width: 12rem;
 }
 
 .max-w-sm{
   max-width: 24rem;
-}
-
-.max-w-\[200px\]{
-  max-width: 200px;
 }
 
 .flex-none{
@@ -1047,6 +1042,11 @@ img {
 
 .translate-x-0{
   --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[calc\(max\(1024px\2c 100vw\)\/2-490px\)\]{
+  --tw-translate-x: calc(max(1024px,100vw) / 2 - 490px);
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1096,16 +1096,12 @@ img {
   resize: both;
 }
 
-.grid-cols-12{
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-rows-3{
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1136,12 +1132,12 @@ img {
   gap: 0.5rem;
 }
 
-.gap-3{
-  gap: 0.75rem;
-}
-
 .gap-8{
   gap: 2rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-5{
@@ -1176,20 +1172,12 @@ img {
   overflow-x: auto;
 }
 
-.whitespace-normal{
-  white-space: normal;
-}
-
 .whitespace-nowrap{
   white-space: nowrap;
 }
 
 .break-words{
   overflow-wrap: break-word;
-}
-
-.rounded-full{
-  border-radius: 9999px;
 }
 
 .rounded-2xl{
@@ -1200,16 +1188,16 @@ img {
   border-radius: 50%;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
 
 .rounded-lg{
   border-radius: 0.5rem;
-}
-
-.rounded-xl{
-  border-radius: 0.75rem;
 }
 
 .border-b{
@@ -1249,10 +1237,6 @@ img {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1286,6 +1270,10 @@ img {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
 }
 
 .bg-red-100{
@@ -1344,11 +1332,6 @@ img {
   padding-bottom: 6rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1369,6 +1352,16 @@ img {
   padding-bottom: 0.25rem;
 }
 
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1377,11 +1370,6 @@ img {
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .pt-28{
@@ -1400,6 +1388,10 @@ img {
   padding-top: 6rem;
 }
 
+.pr-4{
+  padding-right: 1rem;
+}
+
 .pt-16{
   padding-top: 4rem;
 }
@@ -1408,20 +1400,8 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
+.pr-8{
+  padding-right: 2rem;
 }
 
 .text-left{
@@ -1441,34 +1421,9 @@ img {
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-5xl{
@@ -1476,34 +1431,49 @@ img {
   line-height: 1;
 }
 
-.font-medium{
-  font-weight: 500;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.font-light{
-  font-weight: 300;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .font-normal{
   font-weight: 400;
 }
 
-.font-thin{
-  font-weight: 100;
+.font-light{
+  font-weight: 300;
 }
 
 .font-semibold{
   font-weight: 600;
 }
 
+.font-thin{
+  font-weight: 100;
+}
+
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-zinc-500{
@@ -1514,6 +1484,26 @@ img {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -1559,26 +1549,6 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-sky-700{
-  --tw-text-opacity: 1;
-  color: rgb(3 105 161 / var(--tw-text-opacity));
-}
-
-.text-sky-600{
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.text-rose-600{
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -1653,20 +1623,16 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-1000{
-  transition-duration: 1000ms;
-}
-
 .duration-500{
   transition-duration: 500ms;
 }
 
-.duration-300{
-  transition-duration: 300ms;
+.duration-1000{
+  transition-duration: 1000ms;
 }
 
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .ease-out{
@@ -1675,6 +1641,10 @@ img {
 
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #sidebar .nav-heading{
@@ -1771,8 +1741,14 @@ img {
     display: none;
   }
 
-  .lg\:w-\[980px\]{
-    width: 980px;
+  .lg\:w-\[1024px\]{
+    width: 1024px;
+  }
+
+  .lg\:scale-90{
+    --tw-scale-x: .9;
+    --tw-scale-y: .9;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:gap-6{
@@ -1795,6 +1771,10 @@ img {
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:opacity-0{
+    opacity: 0;
   }
 }
 
