--- a/public/css/app.css
+++ b/public/css/app.css
@@ -738,15 +738,11 @@ body {
 .relative{
   position: relative;
 }
-.sticky{
-  position: -webkit-sticky;
-  position: sticky;
+.left-4{
+  left: 1rem;
 }
-.left-0{
-  left: 0px;
-}
-.right-0{
-  right: 0px;
+.right-4{
+  right: 1rem;
 }
 .top-3{
   top: 0.75rem;
@@ -757,14 +753,26 @@ body {
 .top-0{
   top: 0px;
 }
+.left-0{
+  left: 0px;
+}
 .top-1{
   top: 0.25rem;
 }
 .right-1{
   right: 0.25rem;
 }
+.right-0{
+  right: 0px;
+}
 .top-16{
   top: 4rem;
+}
+.z-\[2\]{
+  z-index: 2;
+}
+.z-\[1\]{
+  z-index: 1;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -773,11 +781,11 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.-mr-14{
-  margin-right: -3.5rem;
-}
 .ml-auto{
   margin-left: auto;
+}
+.-mr-14{
+  margin-right: -3.5rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -809,6 +817,12 @@ body {
 .mb-3{
   margin-bottom: 0.75rem;
 }
+.mr-8{
+  margin-right: 2rem;
+}
+.mr-10{
+  margin-right: 2.5rem;
+}
 .block{
   display: block;
 }
@@ -827,14 +841,14 @@ body {
 .h-96{
   height: 24rem;
 }
-.h-14{
-  height: 3.5rem;
-}
 .h-full{
   height: 100%;
 }
 .h-3{
   height: 0.75rem;
+}
+.h-14{
+  height: 3.5rem;
 }
 .h-7{
   height: 1.75rem;
@@ -851,14 +865,8 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-\[\]{
-  height: ;
-}
-.h-9{
-  height: 2.25rem;
-}
-.h-60{
-  height: 15rem;
+.h-32{
+  height: 8rem;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -872,17 +880,23 @@ body {
 .w-3\/5{
   width: 60%;
 }
-.w-14{
-  width: 3.5rem;
-}
-.w-1\/5{
-  width: 20%;
-}
 .w-3{
   width: 0.75rem;
 }
+.w-1\/3{
+  width: 33.333333%;
+}
+.w-2\/5{
+  width: 40%;
+}
 .w-full{
   width: 100%;
+}
+.w-14{
+  width: 3.5rem;
+}
+.w-32{
+  width: 8rem;
 }
 .w-7{
   width: 1.75rem;
@@ -905,32 +919,14 @@ body {
 .w-5{
   width: 1.25rem;
 }
-.w-1\/3{
-  width: 33.333333%;
+.w-2{
+  width: 0.5rem;
 }
-.w-\[240px\]{
-  width: 240px;
-}
-.w-1\/4{
-  width: 25%;
-}
-.w-2\/5{
-  width: 40%;
-}
-.min-w-full{
-  min-width: 100%;
-}
-.min-w-\[400px\]{
-  min-width: 400px;
-}
-.min-w-\[200px\]{
-  min-width: 200px;
+.w-48{
+  width: 12rem;
 }
 .max-w-sm{
   max-width: 24rem;
-}
-.max-w-\[200px\]{
-  max-width: 200px;
 }
 .flex-none{
   flex: none;
@@ -947,6 +943,10 @@ body {
 }
 .translate-x-0{
   --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-\[calc\(max\(1024px\2c 100vw\)\/2-490px\)\]{
+  --tw-translate-x: calc(max(1024px,100vw) / 2 - 490px);
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90{
@@ -989,14 +989,11 @@ body {
 .resize{
   resize: both;
 }
-.grid-cols-12{
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-rows-3{
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .flex-col{
   flex-direction: column;
@@ -1019,11 +1016,11 @@ body {
 .gap-2{
   gap: 0.5rem;
 }
-.gap-3{
-  gap: 0.75rem;
-}
 .gap-8{
   gap: 2rem;
+}
+.gap-3{
+  gap: 0.75rem;
 }
 .gap-5{
   gap: 1.25rem;
@@ -1050,17 +1047,11 @@ body {
 .overflow-x-auto{
   overflow-x: auto;
 }
-.whitespace-normal{
-  white-space: normal;
-}
 .whitespace-nowrap{
   white-space: nowrap;
 }
 .break-words{
   overflow-wrap: break-word;
-}
-.rounded-full{
-  border-radius: 9999px;
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -1068,14 +1059,14 @@ body {
 .rounded-\[50\%\]{
   border-radius: 50%;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
 .rounded-md{
   border-radius: 0.375rem;
 }
 .rounded-lg{
   border-radius: 0.5rem;
-}
-.rounded-xl{
-  border-radius: 0.75rem;
 }
 .border-b{
   border-bottom-width: 1px;
@@ -1106,9 +1097,6 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1136,6 +1124,9 @@ body {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
 }
 .bg-red-100{
   --tw-bg-opacity: 1;
@@ -1181,10 +1172,6 @@ body {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1201,6 +1188,14 @@ body {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1208,10 +1203,6 @@ body {
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .pt-28{
   padding-top: 7rem;
@@ -1225,23 +1216,17 @@ body {
 .pt-24{
   padding-top: 6rem;
 }
+.pr-4{
+  padding-right: 1rem;
+}
 .pt-16{
   padding-top: 4rem;
 }
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-2{
-  padding-top: 0.5rem;
-}
-.pt-4{
-  padding-top: 1rem;
-}
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-.pb-6{
-  padding-bottom: 1.5rem;
+.pr-8{
+  padding-right: 2rem;
 }
 .text-left{
   text-align: left;
@@ -1256,56 +1241,48 @@ body {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
 }
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
 }
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-medium{
   font-weight: 500;
-}
-.font-light{
-  font-weight: 300;
 }
 .font-normal{
   font-weight: 400;
 }
-.font-thin{
-  font-weight: 100;
+.font-light{
+  font-weight: 300;
 }
 .font-semibold{
   font-weight: 600;
 }
+.font-thin{
+  font-weight: 100;
+}
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-zinc-500{
   --tw-text-opacity: 1;
@@ -1314,6 +1291,22 @@ body {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 .text-slate-50{
   --tw-text-opacity: 1;
@@ -1350,22 +1343,6 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-.text-sky-700{
-  --tw-text-opacity: 1;
-  color: rgb(3 105 161 / var(--tw-text-opacity));
-}
-.text-sky-600{
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-.text-rose-600{
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
-}
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -1425,17 +1402,14 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-1000{
-  transition-duration: 1000ms;
-}
 .duration-500{
   transition-duration: 500ms;
 }
+.duration-1000{
+  transition-duration: 1000ms;
+}
 .duration-300{
   transition-duration: 300ms;
-}
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ease-out{
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -1443,6 +1417,17 @@ body {
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+.no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
 
 .menu-item::before {
     content: "";
@@ -1535,8 +1520,15 @@ body {
   }
 
 
-  .lg\:w-\[980px\]{
-    width: 980px;
+  .lg\:w-\[1024px\]{
+    width: 1024px;
+  }
+
+
+  .lg\:scale-90{
+    --tw-scale-x: .9;
+    --tw-scale-y: .9;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
 
@@ -1564,5 +1556,10 @@ body {
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+
+  .lg\:opacity-0{
+    opacity: 0;
   }
 }
