--- a/public/css/app.css
+++ b/public/css/app.css
@@ -769,6 +769,9 @@ body {
 .col-span-12{
   grid-column: span 12 / span 12;
 }
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -917,6 +920,30 @@ body {
 .w-2\/5{
   width: 40%;
 }
+.w-10{
+  width: 2.5rem;
+}
+.w-16{
+  width: 4rem;
+}
+.w-24{
+  width: 6rem;
+}
+.w-28{
+  width: 7rem;
+}
+.w-40{
+  width: 10rem;
+}
+.w-64{
+  width: 16rem;
+}
+.w-60{
+  width: 15rem;
+}
+.w-56{
+  width: 14rem;
+}
 .min-w-full{
   min-width: 100%;
 }
@@ -995,8 +1022,17 @@ body {
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-rows-3{
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+.flex-row{
+  flex-direction: row;
 }
 .flex-col{
   flex-direction: column;
@@ -1027,6 +1063,24 @@ body {
 }
 .gap-5{
   gap: 1.25rem;
+}
+.gap-6{
+  gap: 1.5rem;
+}
+.gap-16{
+  gap: 4rem;
+}
+.gap-20{
+  gap: 5rem;
+}
+.gap-36{
+  gap: 9rem;
+}
+.gap-1{
+  gap: 0.25rem;
+}
+.gap-10{
+  gap: 2.5rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1077,11 +1131,29 @@ body {
 .rounded-xl{
   border-radius: 0.75rem;
 }
+.border{
+  border-width: 1px;
+}
+.border-2{
+  border-width: 2px;
+}
 .border-b{
   border-bottom-width: 1px;
 }
 .border-b-2{
   border-bottom-width: 2px;
+}
+.border-t{
+  border-top-width: 1px;
+}
+.border-t-2{
+  border-top-width: 2px;
+}
+.border-l-2{
+  border-left-width: 2px;
+}
+.border-solid{
+  border-style: solid;
 }
 .border-zinc-700{
   --tw-border-opacity: 1;
@@ -1101,6 +1173,22 @@ body {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
+}
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+.border-zinc-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(228 228 231 / var(--tw-border-opacity));
+}
+.border-zinc-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }
 .bg-gray-100{
   --tw-bg-opacity: 1;
@@ -1243,6 +1331,21 @@ body {
 .pb-6{
   padding-bottom: 1.5rem;
 }
+.pt-12{
+  padding-top: 3rem;
+}
+.pt-3{
+  padding-top: 0.75rem;
+}
+.pl-2{
+  padding-left: 0.5rem;
+}
+.pl-3{
+  padding-left: 0.75rem;
+}
+.pt-1{
+  padding-top: 0.25rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1284,6 +1387,14 @@ body {
   font-size: 3rem;
   line-height: 1;
 }
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 .font-medium{
   font-weight: 500;
 }
@@ -1298,6 +1409,12 @@ body {
 }
 .font-semibold{
   font-weight: 600;
+}
+.font-bold{
+  font-weight: 700;
+}
+.font-extralight{
+  font-weight: 200;
 }
 .text-zinc-900{
   --tw-text-opacity: 1;
@@ -1366,6 +1483,46 @@ body {
 .text-orange-500{
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+.text-orange-400{
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+.text-neutral-400{
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+.text-stone-400{
+  --tw-text-opacity: 1;
+  color: rgb(168 162 158 / var(--tw-text-opacity));
+}
+.text-stone-600{
+  --tw-text-opacity: 1;
+  color: rgb(87 83 78 / var(--tw-text-opacity));
+}
+.text-stone-500{
+  --tw-text-opacity: 1;
+  color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+.text-stone-700{
+  --tw-text-opacity: 1;
+  color: rgb(68 64 60 / var(--tw-text-opacity));
+}
+.text-stone-800{
+  --tw-text-opacity: 1;
+  color: rgb(41 37 36 / var(--tw-text-opacity));
+}
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -1540,8 +1697,33 @@ body {
   }
 
 
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+
+  .lg\:justify-between{
+    justify-content: space-between;
+  }
+
+
   .lg\:gap-6{
     gap: 1.5rem;
+  }
+
+
+  .lg\:gap-36{
+    gap: 9rem;
   }
 
 
@@ -1558,6 +1740,11 @@ body {
 
   .lg\:pl-72{
     padding-left: 18rem;
+  }
+
+
+  .lg\:text-left{
+    text-align: left;
   }
 
 
