--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -831,6 +831,10 @@ img {
   margin-top: 1rem;
 }
 
+.mr-6{
+  margin-right: 1.5rem;
+}
+
 .ml-auto{
   margin-left: auto;
 }
@@ -957,6 +961,10 @@ img {
 
 .w-96{
   width: 24rem;
+}
+
+.w-44{
+  width: 11rem;
 }
 
 .w-3\/5{
@@ -1335,10 +1343,6 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-\[url\(\'http\:\/\/127\.0\.0\.1\:8000\/images\/sound_1\.jfif\'\)\]{
-  background-image: url('http://127.0.0.1:8000/images/sound_1.jfif');
-}
-
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1363,6 +1367,11 @@ img {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-3{
@@ -1400,22 +1409,17 @@ img {
   padding-bottom: 1.5rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.pt-36{
-  padding-top: 9rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .pt-4{
@@ -1424,10 +1428,6 @@ img {
 
 .pt-28{
   padding-top: 7rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
 }
 
 .pt-6{
